	- Default OCB 0 will play Lara use key animation. 
	- Any positive OCB number will play the animation according to the OCB number.
* Add missing gunflash for some entities, also include dynamic light and smoke to all gunflashes.
* Add log reports if title level or other levels don't exist.
* Add better error handling for missing font, sprites or shaders.

Lua API changes:
* Add class Vec2
* Add function String::SetTranslated() 
* Add function Misc::IsStringDisplaying()
* Add the following for use in AddCallback and RemoveCallback:
	- PRESTART, POSTSTART
	- PREEND, POSTEND
	- PRESAVE, POSTSAVE
	- PRELOAD, POSTLOAD

Version 1.0.8
=============

* Fix bubbles phasing through ceilings.
* Fix object camera not clearing at level end.
* Fix double breath sound effect when coming up for air.
* Fix flickering hair.
* Fix harpoon gun triggering water and dry sounds when shooting and reholstering.
* Fix Z-fighting in inventory rendering.
* Fix transparent objects not displaying correctly in the Inventory.
* Fix dozy cheat always giving uzi weapons even if not present in WAD.
* Fix player getting launched when landing close to an edge.
* Fix player going through trapdoor/bridge while climbing up a climbable wall.
* Fix TR3 Sophia's charge ring drawing below floor.
* Fix TR5 imp collision handling and animations:
	- OCB 1: Climbs up to player when triggered.
	- OCB 2: Starts rolling on the floor when triggered.
	- OCB 3: Will throw stones at player.
	- Imp is also scared of of the player if holding a lit torch.
	- Please note you must use the patched version found here: https://github.com/TombEngine/Resources/blob/main/Wad2%20Objects/tr5_Imp.wad2
* Fix and improve wraith tails.
* Add dedicated WRAITH_TRAP object with enhanced effects.
	- OCB 0: Effect disabled.
	- OCB 1: Effect enabled.
* Add TR1 slamming doors.
* Add TR3 mutant wasp (AI_MODIFY object won't allow it to land, the wasp will always fly).
* Add TR3 Corpse